Fix spacing for tabs inside of table cells

--- a/themes/mongodb/src/css/config-table.css
+++ b/themes/mongodb/src/css/config-table.css
@@ -10,6 +10,9 @@
         & p.first, p.last {
             margin-bottom: 0;
         }
+        & div.tabs p:nth-child(1) {
+            margin: 0
+        }
     }
 
 }
